# plantoeat-skylight-sync

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run-loop.sh
src/plantoeat_skylight_sync/: __init__.py  cli.py  config.py  errors.py  ical.py  mapping.py  recipe.py  state.py  sync.py
tests/: _helpers.py  conftest.py  test_cli.py  test_config.py  test_envfile.py  test_ical.py  test_mapping.py  test_mapping_shortcodes.py  test_recipe.py  test_recipe_entities.py  test_recipe_extra.py  test_recipe_source.py  test_state.py  test_sync.py  test_sync_content.py
