[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plantoeat-skylight-sync"
version = "0.3.1"
description = "One-way sync of a Plan to Eat meal plan into Skylight Meals (recipes + sittings)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Joshua Warren" }]
keywords = ["plantoeat", "skylight", "meal-plan", "ical", "sync", "home-automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "pyskylight>=0.1",
    "icalendar>=5.0",
    "httpx>=0.27",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "mypy>=1.10",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
]

[project.scripts]
pte-skylight-sync = "plantoeat_skylight_sync.cli:app"

[project.urls]
Homepage = "https://github.com/joshuaswarren/plantoeat-skylight-sync"
Repository = "https://github.com/joshuaswarren/plantoeat-skylight-sync"
Issues = "https://github.com/joshuaswarren/plantoeat-skylight-sync/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/plantoeat_skylight_sync"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["src/plantoeat_skylight_sync"]

[tool.pytest.ini_options]
addopts = "-ra -q --cov=plantoeat_skylight_sync --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["plantoeat_skylight_sync"]
